<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorWhite"
    tools:context=".InfoFragment">

    <TextView
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="24dp"
        android:text="Email / Pw"
        android:textColor="@color/colorBlue"/>

    <EditText
        android:id="@+id/infoFragmentEmail"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_gravity="center"
        android:padding="6dp"
        android:hint="@string/ID"
        android:background="@drawable/round_outline_blue"
        android:textSize="18sp"
        android:inputType="textEmailAddress"
        />

    <EditText
        android:id="@+id/infoFragmentPW"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_gravity="center"
        android:padding="6dp"
        android:hint="@string/PW"
        android:background="@drawable/round_outline_blue"
        android:textSize="18sp"
        android:inputType="textPassword"
        />

    <EditText
        android:id="@+id/infoFragmentPWConfirm"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_gravity="center"
        android:padding="6dp"
        android:hint="@string/pwConfirm"
        android:background="@drawable/round_outline_blue"
        android:textSize="18sp"
        android:inputType="textPassword"
        />
    <TextView

        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="12dp"
        android:text="Phone"
        android:textColor="@color/colorBlue"/>

    <EditText
        android:id="@+id/infoFragmentPhoneNum"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_gravity="center"
        android:padding="6dp"
        android:hint="@string/phone"
        android:background="@drawable/round_outline_blue"
        android:textSize="18sp"
        android:inputType="number"
        />


    <TextView
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="12dp"
        android:text="Address"
        android:textColor="@color/colorBlue" />

    <EditText
        android:id="@+id/infoFragmentAddress"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_gravity="center"
        android:padding="6dp"
        android:hint="@string/address"
        android:background="@drawable/round_outline_blue"
        android:textSize="18sp"
        android:inputType="text"
        />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="320dp"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        >

        <Button
            android:id="@+id/infoFragmentCompleteButton"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="56dp"
            android:background="@color/colorBlue"
            android:text="완  료"
            android:textColor="@color/colorWhite"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>