<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="100dp"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="100dp"
        android:layout_marginRight="100dp"
        app:srcCompat="@drawable/robot" />

    <EditText
        android:id="@+id/loginEmailEditText"
        style="@style/loginEditText"
        android:layout_below="@+id/imageView3"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="60dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="60dp"
        android:drawableLeft="@drawable/ic_email_black_36dp"
        android:hint="@string/ID"
        android:inputType="textEmailAddress"
        android:background="@drawable/round_outline_blue"/>

    <EditText
        android:id="@+id/loginPWEditText"
        style="@style/loginEditText"
        android:layout_below="@+id/loginEmailEditText"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="60dp"
        android:layout_marginEnd="60dp"
        android:layout_marginTop="8dp"
        android:drawableLeft="@drawable/ic_lock_outline_black_36dp"
        android:hint="@string/PW"
        android:inputType="textPassword"
        android:background="@drawable/round_outline_blue"/>

    <Button
        android:id="@+id/loginButton"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/loginPWEditText"
        android:layout_alignParentStart="true"
        android:layout_marginStart="60dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/round_background"
        android:text="@string/signIn"
        android:textColor="@color/colorWhite"
        android:textAllCaps="false"/>

    <Button
        android:id="@+id/signUpButton"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/loginPWEditText"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="40dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="60dp"
        android:background="@drawable/round_background"
        android:text="@string/signUp"
        android:textColor="@color/colorWhite"
        android:textAllCaps="false"/>


</RelativeLayout>