<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorWhite"
    tools:context=".ConditionsFragment">
    <TextView
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="24dp"
        android:text="약관"
        android:textSize="18sp"
        android:textColor="#000000"/>
    <TextView
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="24dp"
        android:padding="6dp"
        android:hint="@string/conditionContents"
        android:background="@drawable/round_outline_black"
        android:textSize="12sp"
        android:textColor="#000000"/>
    <RadioGroup
        android:id="@+id/conditionsFragmentRadioGroup"
        android:layout_width="320dp"
        android:layout_height="20dp"
        android:layout_gravity="center"
        android:layout_marginTop="24dp"
        android:orientation="horizontal">
        <RadioButton
            android:id="@+id/conditionsFragmentAgreeRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/conditionAgree"/>

        <RadioButton
            android:id="@+id/conditionsFragmentDisAgreeRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="100dp"
            android:text="@string/conditionDisAgree"/>
    </RadioGroup>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="320dp"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        >

        <Button
            android:id="@+id/conditionsFragmentNextButton"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:background="@drawable/round_background"
            android:text="다   음"
            android:textColor="@color/colorWhite"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>